docs: add list openings docs
